Changed defaults on lr and clipnorm

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ requests
 pathy
 natsort
 tqdm
+umap-learn
 scikit-learn
 -e git+https://github.com/sholtodouglas/pandaRL@ef8fea79da58b55576a85cb66104d6669d018a6e#egg=pandaRL
