--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "pandaRL"]
-	path = pandaRL
-	url = https://github.com/sholtodouglas/pandaRL.git
+[submodule "roboticsPlayroomPybullet"]
+	path = roboticsPlayroomPybullet
+	url = https://github.com/sholtodouglas/roboticsPlayroomPybullet.git
